--- a/replay.ipynb
+++ b/replay.ipynb
@@ -6,10 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from deep_orderbook.replayer import Replayer\n",
-    "from deep_orderbook.shaper import BookShaper\n",
     "import numpy as np\n",
-    "from pylab import rcParams"
+    "import asyncio\n",
+    "from deep_orderbook.shaper import ArrayShaper\n",
+    "from deep_orderbook.config import ReplayConfig, ShaperConfig"
    ]
   },
   {
@@ -18,123 +18,77 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "replay_conf_3 = ReplayConfig(\n",
+    "    markets=[\"ETH-USD\"],#, \"BTC-USD\", \"ETH-BTC\"],\n",
+    "    data_dir='data',\n",
+    "    date_regexp='2024-1*T16',\n",
+    "    max_samples=-1,\n",
+    "    every=\"100ms\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from deep_orderbook.replayer import iter_sec\n",
+    "\n",
+    "async for onesec in iter_sec(config=replay_conf_3.but(max_samples=1)):\n",
+    "    print(onesec)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shaper_config = ShaperConfig(\n",
+    "    only_full_arrays=False,\n",
+    "    zoom_frac = 0.0005,\n",
+    "    look_ahead_side_bips = 2,\n",
+    ")\n",
+    "\n",
+    "async def iter_shapes(config: ReplayConfig):\n",
+    "    symbol_shapers = {\n",
+    "        pair: ArrayShaper(config=shaper_config) for pair in config.markets\n",
+    "    }\n",
+    "    async for onesec in iter_sec(config=config):\n",
+    "        if any(onesec.symbols[market].no_bbo() for market in config.markets):\n",
+    "            print('Empty books')\n",
+    "            continue\n",
+    "        yield {\n",
+    "            market: await symbol_shapers[market].make_arr3d(onesec.symbols[market])\n",
+    "            for market in config.markets\n",
+    "        }\n",
+    "\n",
+    "async for shaped in iter_shapes(\n",
+    "    config=replay_conf_3.but(max_samples=4)\n",
+    "):\n",
+    "    for k, v in shaped.items():\n",
+    "        print(f\"{k}: {v.shape}, values from {v.min()} to {v.max()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from deep_orderbook.visu import Visualizer\n",
+    "import seaborn_image as isns\n",
     "import matplotlib.pyplot as plt\n",
     "from IPython.display import clear_output\n",
-    "rcParams['figure.figsize'] = 20, 4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "MARKETS = [\"ETHBTC\", \"BTCUSDT\", \"ETHUSDT\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# itertools for asyncio !\n",
-    "import asyncio\n",
-    "from aioitertools import iter, next, map, zip\n",
-    "from aioitertools import enumerate"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "shaper = BookShaper()\n",
-    "file_replayer = Replayer('../crypto-trading/data/L2', date_regexp='2020')\n",
-    "areplay = file_replayer.replayL2_async(pair='ETHBTC', shaper=shaper)\n",
-    "await next(areplay)\n",
-    "batptr = await next(areplay)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i in range(100):\n",
-    "    batptr = await next(areplay)\n",
-    "print(f\"bids:\\n{batptr['bids'].head()}\")\n",
-    "print(f\"asks:\\n{batptr['asks'].head()}\")\n",
-    "print(f\"prices:\\n{batptr['price']}\")\n",
-    "print(f\"trades:\\n{batptr['trades']}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "multi_replay = file_replayer.multireplayL2_async(MARKETS)\n",
-    "d = await next(multi_replay)\n",
-    "d"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "async def run(maxpoints=10):\n",
-    "    async for i in iter(range(maxpoints)):\n",
-    "        d = await next(multi_replay)\n",
-    "    #return d\n",
     "\n",
-    "task = asyncio.create_task(run())\n",
-    "await task"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "genarr = shaper.gen_array_async(market_replay=multi_replay, markets=MARKETS)\n",
-    "_ = await next(genarr)\n",
-    "_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "genacc = shaper.accumulate_array(genarr, markets=MARKETS)\n",
-    "_ = await next(genacc)\n",
-    "_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "async for toshow in BookShaper.images(accumulated_arrays=genacc, every=1, LENGTH=512):\n",
-    "    plt.figure(figsize=(15,11))\n",
-    "    plt.imshow(toshow, origin=\"upper\")\n",
+    "\n",
+    "async for shapes in iter_shapes(\n",
+    "    config=replay_conf_3.but(max_samples=100)\n",
+    "):\n",
+    "    books_array = shapes['ETH-USD']\n",
+    "    im_data, _, _ = Visualizer.for_image_display(books_array=books_array)\n",
+    "    isns.imshow(im_data, origin='lower', cmap='coolwarm', vmin=-1, vmax=1, gray=True)\n",
     "    clear_output(wait=True)\n",
     "    plt.show()"
    ]
@@ -145,33 +99,235 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "every = 2\n",
-    "LENGTH = 256\n",
-    "x = []\n",
-    "async for n,sec in enumerate(genacc):\n",
-    "    allim = []\n",
-    "    for symb, data in sec.items():\n",
-    "        arr = np.stack(data['bs'][-LENGTH:])\n",
-    "        im = arr\n",
-    "        im[:,:,0] /= 10\n",
-    "        im += 0.5\n",
-    "        allim.append(im)\n",
-    "    allim = np.concatenate(allim, axis=1)\n",
-    "    if n % every == 0:\n",
-    "        plt.figure(figsize=(15,11))\n",
-    "        toshow = allim.transpose(1,0,2)\n",
-    "        toshow = np.clip(toshow, 0, 1)\n",
-    "        plt.imshow(toshow, origin=\"lower\")\n",
-    "        plt.show()\n",
-    "        # pr = np.stack(data['ps'])[-LENGTH:, :-1]\n",
-    "        # plt.plot(pr)\n",
-    "        # plt.show()\n",
-    "#        print(symb)\n",
-    "        clear_output(wait=True)\n",
-    "#        plt.show()\n",
-    "#    if n == 100:\n",
-    "#        break\n",
-    "    pass"
+    "from deep_orderbook.shaper import iter_shapes_t2l\n",
+    "\n",
+    "async for shapes in iter_shapes_t2l(\n",
+    "    replay_config=replay_conf_3.but(max_samples=4),\n",
+    "    shaper_config=shaper_config,\n",
+    "):\n",
+    "    print(shapes[0].shape, shapes[1].shape, shapes[2].shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from deep_orderbook.visu import Visualizer\n",
+    "\n",
+    "vis = Visualizer()\n",
+    "async def rolling_plot(config: ReplayConfig):\n",
+    "    async for books_array, t2l_array, pxar in iter_shapes_t2l(\n",
+    "        replay_config=config.but(every=\"200ms\"),\n",
+    "        shaper_config=shaper_config.but(zoom_frac=0.0004, look_ahead_side_bips=1)\n",
+    "    ):\n",
+    "        vis.update(books_z_data=books_array, level_reach_z_data=t2l_array, bidask=pxar)\n",
+    "\n",
+    "await rolling_plot(config=replay_conf_3.but(\n",
+    "        max_samples=100, \n",
+    "        # skip_until_time=\"23:15\",\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aaaaaaaaaa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import holoviews as hv\n",
+    "import panel as pn\n",
+    "from holoviews.streams import Pipe\n",
+    "import nest_asyncio\n",
+    "\n",
+    "# Apply nest_asyncio to allow nested event loops in Jupyter\n",
+    "nest_asyncio.apply()\n",
+    "\n",
+    "# Enable the Bokeh backend for HoloViews and initialize Panel\n",
+    "hv.extension('bokeh')\n",
+    "pn.extension()\n",
+    "\n",
+    "# Initialize Streams with appropriate empty data\n",
+    "im_pipe = Pipe(data=np.zeros((10, 10)))  # For 'Books' heatmap\n",
+    "t2l_pipe = Pipe(data=np.zeros((10, 10)))  # For 'Level Proximity' heatmap\n",
+    "bidask_pipe = Pipe(data=np.empty((0, 2)))  # For 'Bid and Ask Price Levels'\n",
+    "\n",
+    "# Define HoloViews DynamicMaps for heatmaps\n",
+    "im_dmap = hv.DynamicMap(\n",
+    "    lambda data: hv.Image(data).opts(\n",
+    "        invert_yaxis=True,\n",
+    "        cmap='RdBu',\n",
+    "        colorbar=True,\n",
+    "        width=1200,\n",
+    "        height=200,\n",
+    "        title='Books',\n",
+    "        xaxis=None,\n",
+    "        yaxis=None,\n",
+    "        ylim=(-0.5, 0.5),\n",
+    "        axiswise=True,\n",
+    "        framewise=True,\n",
+    "        shared_axes=False,\n",
+    "    ),\n",
+    "    streams=[im_pipe],\n",
+    ")\n",
+    "\n",
+    "t2l_dmap = hv.DynamicMap(\n",
+    "    lambda data: hv.Image(data).opts(\n",
+    "        invert_yaxis=True,\n",
+    "        cmap='Turbo',\n",
+    "        colorbar=True,\n",
+    "        width=1200,\n",
+    "        height=200,\n",
+    "        title='Level Proximity',\n",
+    "        xaxis=None,\n",
+    "        yaxis=None,\n",
+    "        ylim=(-0.5, 0.5),\n",
+    "        axiswise=True,\n",
+    "        framewise=True,\n",
+    "        shared_axes=False,\n",
+    "    ),\n",
+    "    streams=[t2l_pipe],\n",
+    ")\n",
+    "\n",
+    "\n",
+    "def bidask_plot(data):\n",
+    "    bid_curve = hv.Curve((data[:, 0]), 'bid').opts(\n",
+    "        color='green', line_width=2, framewise=True\n",
+    "    )\n",
+    "    ask_curve = hv.Curve((data[:, 1]), 'ask').opts(\n",
+    "        color='red', line_width=2, framewise=True\n",
+    "    )\n",
+    "    return (bid_curve * ask_curve).opts(\n",
+    "        width=1200,\n",
+    "        height=200,\n",
+    "        title='Bid and Ask',\n",
+    "        # yaxis=None, xaxis='bottom'\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "bidask_dmap = hv.DynamicMap(bidask_plot, streams=[bidask_pipe])\n",
+    "\n",
+    "# Layout the plots vertically using Panel\n",
+    "dashboard = pn.Column(pn.panel(im_dmap), pn.panel(t2l_dmap), pn.panel(bidask_dmap))\n",
+    "\n",
+    "\n",
+    "# Define the async update function\n",
+    "async def run_updates():\n",
+    "    async for shaped, t2l, pxar in iter_shapes_t2l(\n",
+    "        replay_config=replay_conf_3.but(max_samples=100, skip_until_time=\"23:15\"),\n",
+    "        shaper_config=shaper_config,\n",
+    "    ):\n",
+    "        books_z_data, level_reach_z_data, bidask = Visualizer.for_image_display(\n",
+    "            shaped, t2l, pxar\n",
+    "        )\n",
+    "        im_pipe.send(np.clip(books_z_data, -1, 1))\n",
+    "        t2l_pipe.send(level_reach_z_data)\n",
+    "        bidask_pipe.send(bidask)\n",
+    "\n",
+    "\n",
+    "display(dashboard)\n",
+    "await asyncio.sleep(0.1)\n",
+    "\n",
+    "# Start the async update in the background\n",
+    "asyncio.create_task(run_updates())\n",
+    "# dashboard.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import holoviews as hv\n",
+    "\n",
+    "hv.extension(\"bokeh\", logo=False)\n",
+    "\n",
+    "import numpy as np\n",
+    "import asyncio\n",
+    "import panel as pn\n",
+    "\n",
+    "pn.extension()\n",
+    "import nest_asyncio\n",
+    "\n",
+    "nest_asyncio.apply()\n",
+    "\n",
+    "\n",
+    "# Create a reactive HoloViews stream\n",
+    "stream = hv.streams.Stream.define('ImageUpdate', data=None)()\n",
+    "\n",
+    "\n",
+    "# Function to update the image\n",
+    "async def update_image():\n",
+    "    async for shapes in iter_shapes(\n",
+    "        config=replay_conf_3.but(max_samples=1000, skip_until_time=\"23:15\")\n",
+    "    ):\n",
+    "        books_array = shapes['ETH-USD']\n",
+    "        im_display, _, _ = Visualizer.for_image_display(books_array=books_array)\n",
+    "\n",
+    "        # Update the stream with the processed image\n",
+    "        stream.event(data=im_display)\n",
+    "        # await asyncio.sleep(0.1)\n",
+    "\n",
+    "\n",
+    "# Start the asynchronous update\n",
+    "asyncio.create_task(update_image())\n",
+    "\n",
+    "\n",
+    "# Function to create the hv.Image with correct bounds\n",
+    "def create_image(data):\n",
+    "    if data is not None:\n",
+    "        height, width = data.shape\n",
+    "        return hv.Image(data, bounds=(0, 0, width, height))\n",
+    "    else:\n",
+    "        # Placeholder image if data is None\n",
+    "        return hv.Image(np.zeros((128, 256)), bounds=(0, 0, 256, 128))\n",
+    "\n",
+    "\n",
+    "# DynamicMap that updates with the stream\n",
+    "dmap = hv.DynamicMap(create_image, streams=[stream])\n",
+    "\n",
+    "# Set display options\n",
+    "dmap.opts(\n",
+    "    cmap='RdBu',\n",
+    "    frame_width=800,\n",
+    "    aspect=256 / 128,\n",
+    "    invert_yaxis=True,\n",
+    "    xlabel='second',\n",
+    "    ylabel='levels',\n",
+    "    colorbar=True,\n",
+    "    clim=(-1, 1),\n",
+    ")\n",
+    "\n",
+    "# Display with Panel\n",
+    "pn.panel(dmap).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly.express as px\n",
+    "from skimage import io\n",
+    "\n",
+    "img = io.imread(\n",
+    "    'https://upload.wikimedia.org/wikipedia/commons/thumb/0/00/Crab_Nebula.jpg/240px-Crab_Nebula.jpg'\n",
+    ")\n",
+    "fig = px.imshow(img)\n",
+    "fig.show()"
    ]
   },
   {
@@ -184,7 +340,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -198,7 +354,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
